--- a/05-service/03-service-load-balancer.yaml
+++ b/05-service/03-service-load-balancer.yaml
@@ -24,12 +24,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-cluster-ip
+  name: nginx-load-balancer
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - name: http
-    port: 80
+    port: 8083
     targetPort: 80
     protocol: TCP
   selector:
